--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,10 +41,11 @@
         "scss/vendors/bootstrap/_utilities.scss",
         "scss/grid/_grid.scss",
         "scss/helpers/_helpers.scss",
-        "scss/utilities/utilities.scss",
+        "scss/utilities/_utilities.scss",
         "scss/base/_base.scss",
         "scss/layout/_layout.scss",
         "scss/pages/_index.scss",
+        "scss/utilities/_effect.scss",
         "scss/vendors/bootstrap/vendor/_rfs.scss",
         "scss/vendors/bootstrap/mixins/_deprecate.scss",
         "scss/vendors/bootstrap/mixins/_breakpoints.scss",
