--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,6 +42,7 @@
         "scss/utilities/_utilities.scss",
         "scss/base/_base.scss",
         "scss/layout/_layout.scss",
+        "scss/layout/_loading.scss",
         "scss/pages/_index.scss",
         "scss/utilities/_effect.scss",
         "scss/vendors/bootstrap/vendor/_rfs.scss",
@@ -76,213 +77,6 @@
         "scss/vendors/bootstrap/mixins/_grid-framework.scss",
         "scss/vendors/bootstrap/mixins/_grid.scss",
         "scss/vendors/bootstrap/mixins/_float.scss",
-        "scss/vendors/bootstrap/utilities/_align.scss",
-        "scss/vendors/bootstrap/utilities/_background.scss",
-        "scss/vendors/bootstrap/utilities/_borders.scss",
-        "scss/vendors/bootstrap/utilities/_clearfix.scss",
-        "scss/vendors/bootstrap/utilities/_display.scss",
-        "scss/vendors/bootstrap/utilities/_embed.scss",
-        "scss/vendors/bootstrap/utilities/_flex.scss",
-        "scss/vendors/bootstrap/utilities/_float.scss",
-        "scss/vendors/bootstrap/utilities/_interactions.scss",
-        "scss/vendors/bootstrap/utilities/_overflow.scss",
-        "scss/vendors/bootstrap/utilities/_position.scss",
-        "scss/vendors/bootstrap/utilities/_screenreaders.scss",
-        "scss/vendors/bootstrap/utilities/_shadows.scss",
-        "scss/vendors/bootstrap/utilities/_sizing.scss",
-        "scss/vendors/bootstrap/utilities/_spacing.scss",
-        "scss/vendors/bootstrap/utilities/_stretched-link.scss",
-        "scss/vendors/bootstrap/utilities/_text.scss",
-        "scss/vendors/bootstrap/utilities/_visibility.scss"
-      ]
-    },
-    {
-      "path": "scss/vendors/bootstrap/bootstrap-grid.scss",
-      "imports": [
-        "scss/vendors/bootstrap/_functions.scss",
-        "scss/vendors/bootstrap/_variables.scss",
-        "scss/vendors/bootstrap/mixins/_breakpoints.scss",
-        "scss/vendors/bootstrap/mixins/_grid-framework.scss",
-        "scss/vendors/bootstrap/mixins/_grid.scss",
-        "scss/vendors/bootstrap/_grid.scss",
-        "scss/vendors/bootstrap/utilities/_display.scss",
-        "scss/vendors/bootstrap/utilities/_flex.scss",
-        "scss/vendors/bootstrap/utilities/_spacing.scss"
-      ]
-    },
-    {
-      "path": "scss/vendors/bootstrap/bootstrap-reboot.scss",
-      "imports": [
-        "scss/vendors/bootstrap/_functions.scss",
-        "scss/vendors/bootstrap/_variables.scss",
-        "scss/vendors/bootstrap/_mixins.scss",
-        "scss/vendors/bootstrap/_reboot.scss",
-        "scss/vendors/bootstrap/vendor/_rfs.scss",
-        "scss/vendors/bootstrap/mixins/_deprecate.scss",
-        "scss/vendors/bootstrap/mixins/_breakpoints.scss",
-        "scss/vendors/bootstrap/mixins/_hover.scss",
-        "scss/vendors/bootstrap/mixins/_image.scss",
-        "scss/vendors/bootstrap/mixins/_badge.scss",
-        "scss/vendors/bootstrap/mixins/_resize.scss",
-        "scss/vendors/bootstrap/mixins/_screen-reader.scss",
-        "scss/vendors/bootstrap/mixins/_size.scss",
-        "scss/vendors/bootstrap/mixins/_reset-text.scss",
-        "scss/vendors/bootstrap/mixins/_text-emphasis.scss",
-        "scss/vendors/bootstrap/mixins/_text-hide.scss",
-        "scss/vendors/bootstrap/mixins/_text-truncate.scss",
-        "scss/vendors/bootstrap/mixins/_visibility.scss",
-        "scss/vendors/bootstrap/mixins/_alert.scss",
-        "scss/vendors/bootstrap/mixins/_buttons.scss",
-        "scss/vendors/bootstrap/mixins/_caret.scss",
-        "scss/vendors/bootstrap/mixins/_pagination.scss",
-        "scss/vendors/bootstrap/mixins/_lists.scss",
-        "scss/vendors/bootstrap/mixins/_list-group.scss",
-        "scss/vendors/bootstrap/mixins/_nav-divider.scss",
-        "scss/vendors/bootstrap/mixins/_forms.scss",
-        "scss/vendors/bootstrap/mixins/_table-row.scss",
-        "scss/vendors/bootstrap/mixins/_background-variant.scss",
-        "scss/vendors/bootstrap/mixins/_border-radius.scss",
-        "scss/vendors/bootstrap/mixins/_box-shadow.scss",
-        "scss/vendors/bootstrap/mixins/_gradients.scss",
-        "scss/vendors/bootstrap/mixins/_transition.scss",
-        "scss/vendors/bootstrap/mixins/_clearfix.scss",
-        "scss/vendors/bootstrap/mixins/_grid-framework.scss",
-        "scss/vendors/bootstrap/mixins/_grid.scss",
-        "scss/vendors/bootstrap/mixins/_float.scss"
-      ]
-    },
-    {
-      "path": "scss/vendors/bootstrap/bootstrap.scss",
-      "imports": [
-        "scss/vendors/bootstrap/_functions.scss",
-        "scss/vendors/bootstrap/_variables.scss",
-        "scss/vendors/bootstrap/_mixins.scss",
-        "scss/vendors/bootstrap/_root.scss",
-        "scss/vendors/bootstrap/_reboot.scss",
-        "scss/vendors/bootstrap/_type.scss",
-        "scss/vendors/bootstrap/_images.scss",
-        "scss/vendors/bootstrap/_code.scss",
-        "scss/vendors/bootstrap/_grid.scss",
-        "scss/vendors/bootstrap/_tables.scss",
-        "scss/vendors/bootstrap/_forms.scss",
-        "scss/vendors/bootstrap/_buttons.scss",
-        "scss/vendors/bootstrap/_transitions.scss",
-        "scss/vendors/bootstrap/_dropdown.scss",
-        "scss/vendors/bootstrap/_button-group.scss",
-        "scss/vendors/bootstrap/_input-group.scss",
-        "scss/vendors/bootstrap/_custom-forms.scss",
-        "scss/vendors/bootstrap/_nav.scss",
-        "scss/vendors/bootstrap/_navbar.scss",
-        "scss/vendors/bootstrap/_card.scss",
-        "scss/vendors/bootstrap/_breadcrumb.scss",
-        "scss/vendors/bootstrap/_pagination.scss",
-        "scss/vendors/bootstrap/_badge.scss",
-        "scss/vendors/bootstrap/_jumbotron.scss",
-        "scss/vendors/bootstrap/_alert.scss",
-        "scss/vendors/bootstrap/_progress.scss",
-        "scss/vendors/bootstrap/_media.scss",
-        "scss/vendors/bootstrap/_list-group.scss",
-        "scss/vendors/bootstrap/_close.scss",
-        "scss/vendors/bootstrap/_toasts.scss",
-        "scss/vendors/bootstrap/_modal.scss",
-        "scss/vendors/bootstrap/_tooltip.scss",
-        "scss/vendors/bootstrap/_popover.scss",
-        "scss/vendors/bootstrap/_carousel.scss",
-        "scss/vendors/bootstrap/_spinners.scss",
-        "scss/vendors/bootstrap/_utilities.scss",
-        "scss/vendors/bootstrap/_print.scss",
-        "scss/vendors/bootstrap/vendor/_rfs.scss",
-        "scss/vendors/bootstrap/mixins/_deprecate.scss",
-        "scss/vendors/bootstrap/mixins/_breakpoints.scss",
-        "scss/vendors/bootstrap/mixins/_hover.scss",
-        "scss/vendors/bootstrap/mixins/_image.scss",
-        "scss/vendors/bootstrap/mixins/_badge.scss",
-        "scss/vendors/bootstrap/mixins/_resize.scss",
-        "scss/vendors/bootstrap/mixins/_screen-reader.scss",
-        "scss/vendors/bootstrap/mixins/_size.scss",
-        "scss/vendors/bootstrap/mixins/_reset-text.scss",
-        "scss/vendors/bootstrap/mixins/_text-emphasis.scss",
-        "scss/vendors/bootstrap/mixins/_text-hide.scss",
-        "scss/vendors/bootstrap/mixins/_text-truncate.scss",
-        "scss/vendors/bootstrap/mixins/_visibility.scss",
-        "scss/vendors/bootstrap/mixins/_alert.scss",
-        "scss/vendors/bootstrap/mixins/_buttons.scss",
-        "scss/vendors/bootstrap/mixins/_caret.scss",
-        "scss/vendors/bootstrap/mixins/_pagination.scss",
-        "scss/vendors/bootstrap/mixins/_lists.scss",
-        "scss/vendors/bootstrap/mixins/_list-group.scss",
-        "scss/vendors/bootstrap/mixins/_nav-divider.scss",
-        "scss/vendors/bootstrap/mixins/_forms.scss",
-        "scss/vendors/bootstrap/mixins/_table-row.scss",
-        "scss/vendors/bootstrap/mixins/_background-variant.scss",
-        "scss/vendors/bootstrap/mixins/_border-radius.scss",
-        "scss/vendors/bootstrap/mixins/_box-shadow.scss",
-        "scss/vendors/bootstrap/mixins/_gradients.scss",
-        "scss/vendors/bootstrap/mixins/_transition.scss",
-        "scss/vendors/bootstrap/mixins/_clearfix.scss",
-        "scss/vendors/bootstrap/mixins/_grid-framework.scss",
-        "scss/vendors/bootstrap/mixins/_grid.scss",
-        "scss/vendors/bootstrap/mixins/_float.scss",
-        "scss/vendors/bootstrap/utilities/_align.scss",
-        "scss/vendors/bootstrap/utilities/_background.scss",
-        "scss/vendors/bootstrap/utilities/_borders.scss",
-        "scss/vendors/bootstrap/utilities/_clearfix.scss",
-        "scss/vendors/bootstrap/utilities/_display.scss",
-        "scss/vendors/bootstrap/utilities/_embed.scss",
-        "scss/vendors/bootstrap/utilities/_flex.scss",
-        "scss/vendors/bootstrap/utilities/_float.scss",
-        "scss/vendors/bootstrap/utilities/_interactions.scss",
-        "scss/vendors/bootstrap/utilities/_overflow.scss",
-        "scss/vendors/bootstrap/utilities/_position.scss",
-        "scss/vendors/bootstrap/utilities/_screenreaders.scss",
-        "scss/vendors/bootstrap/utilities/_shadows.scss",
-        "scss/vendors/bootstrap/utilities/_sizing.scss",
-        "scss/vendors/bootstrap/utilities/_spacing.scss",
-        "scss/vendors/bootstrap/utilities/_stretched-link.scss",
-        "scss/vendors/bootstrap/utilities/_text.scss",
-        "scss/vendors/bootstrap/utilities/_visibility.scss"
-      ]
-    },
-    {
-      "path": "scss/vendors/bootstrap/_mixins.scss",
-      "imports": [
-        "scss/vendors/bootstrap/vendor/_rfs.scss",
-        "scss/vendors/bootstrap/mixins/_deprecate.scss",
-        "scss/vendors/bootstrap/mixins/_breakpoints.scss",
-        "scss/vendors/bootstrap/mixins/_hover.scss",
-        "scss/vendors/bootstrap/mixins/_image.scss",
-        "scss/vendors/bootstrap/mixins/_badge.scss",
-        "scss/vendors/bootstrap/mixins/_resize.scss",
-        "scss/vendors/bootstrap/mixins/_screen-reader.scss",
-        "scss/vendors/bootstrap/mixins/_size.scss",
-        "scss/vendors/bootstrap/mixins/_reset-text.scss",
-        "scss/vendors/bootstrap/mixins/_text-emphasis.scss",
-        "scss/vendors/bootstrap/mixins/_text-hide.scss",
-        "scss/vendors/bootstrap/mixins/_text-truncate.scss",
-        "scss/vendors/bootstrap/mixins/_visibility.scss",
-        "scss/vendors/bootstrap/mixins/_alert.scss",
-        "scss/vendors/bootstrap/mixins/_buttons.scss",
-        "scss/vendors/bootstrap/mixins/_caret.scss",
-        "scss/vendors/bootstrap/mixins/_pagination.scss",
-        "scss/vendors/bootstrap/mixins/_lists.scss",
-        "scss/vendors/bootstrap/mixins/_list-group.scss",
-        "scss/vendors/bootstrap/mixins/_nav-divider.scss",
-        "scss/vendors/bootstrap/mixins/_forms.scss",
-        "scss/vendors/bootstrap/mixins/_table-row.scss",
-        "scss/vendors/bootstrap/mixins/_background-variant.scss",
-        "scss/vendors/bootstrap/mixins/_border-radius.scss",
-        "scss/vendors/bootstrap/mixins/_box-shadow.scss",
-        "scss/vendors/bootstrap/mixins/_gradients.scss",
-        "scss/vendors/bootstrap/mixins/_transition.scss",
-        "scss/vendors/bootstrap/mixins/_clearfix.scss",
-        "scss/vendors/bootstrap/mixins/_grid-framework.scss",
-        "scss/vendors/bootstrap/mixins/_grid.scss",
-        "scss/vendors/bootstrap/mixins/_float.scss"
-      ]
-    },
-    {
-      "path": "scss/vendors/bootstrap/_utilities.scss",
-      "imports": [
         "scss/vendors/bootstrap/utilities/_align.scss",
         "scss/vendors/bootstrap/utilities/_background.scss",
         "scss/vendors/bootstrap/utilities/_borders.scss",
@@ -346,7 +140,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7886,
+    "port": 7887,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
