修改 loading 動畫(mobile 尺寸)

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,10 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "scss",
+      "scss/base"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -140,7 +143,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7888,
+    "port": 7889,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
